--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "barryvdh/laravel-dompdf": "^0.8.6",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.5",
@@ -16,7 +17,7 @@
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.1",
         "laraveles/spanish": "^1.4",
-        "nesbot/carbon": "^2.32"
+        "nesbot/carbon": "^2.33"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
