--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+STRIPE_KEY=pk_test_m9ssYsX10nHqo7Tv9V6zZkCO00FPJcj1Jy
+STRIPE_SECRET=sk_test_wIq594KFBSpQPk8QnHPwSRAm003jbo8CsK
