--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "stripe/stripe-php": "^7.31"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.3",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "laravel/ui": "^2.0",
