--- a/.env.example
+++ b/.env.example
@@ -2,20 +2,21 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=true
+APP_URL=http://proyecto.test:8080
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
+DB_PORT=33066
+DB_DATABASE=estudiocristys
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -26,10 +27,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=8ab0707321a145
+MAIL_PASSWORD=3ed3e52774fa43
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS=Cristy@estudiocristys.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -45,5 +46,5 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-STRIPE_KEY=pk_test_m9ssYsX10nHqo7Tv9V6zZkCO00FPJcj1Jy
-STRIPE_SECRET=sk_test_wIq594KFBSpQPk8QnHPwSRAm003jbo8CsK
+STRIPE_KEY=pk_test_DQbyxrJgAAgKbk6bflU5y0WT00qu65sYeI
+STRIPE_SECRET=sk_test_D1Ycl2wLlkxnGzv7IhKBWMfN00YHnOvkH4
